@@ -1,6 +1,6 @@
 /*****************************************************************************
 
- @(#) $Id: strsubr.h,v 0.9.2.86 2008-04-28 12:54:02 brian Exp $
+ @(#) $Id: strsubr.h,v 0.9.2.87 2008-07-31 17:28:19 brian Exp $
 
  -----------------------------------------------------------------------------
 
@@ -46,11 +46,14 @@
 
  -----------------------------------------------------------------------------
 
- Last Modified $Date: 2008-04-28 12:54:02 $ by $Author: brian $
+ Last Modified $Date: 2008-07-31 17:28:19 $ by $Author: brian $
 
  -----------------------------------------------------------------------------
 
  $Log: strsubr.h,v $
+ Revision 0.9.2.87  2008-07-31 17:28:19  brian
+ - workaround for runqueues for crash(8)
+
  Revision 0.9.2.86  2008-04-28 12:54:02  brian
  - update file headers for release
 
@@ -119,7 +122,7 @@
 #ifndef __SYS_STREAMS_STRSUBR_H__
 #define __SYS_STREAMS_STRSUBR_H__
 
-#ident "@(#) $RCSfile: strsubr.h,v $ $Name:  $($Revision: 0.9.2.86 $) Copyright (c) 2001-2008 OpenSS7 Corporation."
+#ident "@(#) $RCSfile: strsubr.h,v $ $Name:  $($Revision: 0.9.2.87 $) Copyright (c) 2001-2008 OpenSS7 Corporation."
 
 #ifndef __SYS_STRSUBR_H__
 #warning "Do no include sys/streams/strsubr.h directly, include sys/strsubr.h instead."
@@ -789,6 +792,8 @@ extern ulong sysctl_str_strctlsz;
 __STREAMS_EXTERN int register_clone(struct cdevsw *cdev);
 __STREAMS_EXTERN int unregister_clone(struct cdevsw *cdev);
 
+/* workaround for crash(8) */
+#define runqueues srunqueues
 __STREAMS_EXTERN void runqueues(void);
 
 /* If you use this structure, you might want to upcall to the stream head functions behind these.
