@@ -4,3 +4,4 @@
 *_simple.h
 *_storage.c
 *_storage.h
+*.tree
